Fix the bug caused by jwt token and image overflow (#88)
* Fix a bug in submitPromotion

* Fix the bug caused by jwt token and add the corresponding restaurant to the database when saving a promotion

* Add a test to check the functionality of getRestaurant

* Add the restaurant id field into the Promotion table

* Add the restaurant id field into testing.db and modify getRestaurant to pass all the tests

* Fix the bug caused by too long images in the create promotion page

--- a/frontend-restaurant-owner/src/CreatePromotion/UploadImage.css
+++ b/frontend-restaurant-owner/src/CreatePromotion/UploadImage.css
@@ -51,6 +51,7 @@
 .image {
     position: absolute;
     width: 100%;
+    height: 100%;
     object-fit: cover;
     top: 50%;
     left: 50%;
